landing page component and routing

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -8,3 +8,14 @@
     <p>{{video.snippet.publishTime | date}}</p>
   </a>
 </div>
+
+<div class="container">
+  <a href="" target="_blank">
+    <div class="img">
+      <img src="/assets/img2.png" alt="">
+    </div>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aut optio veniam cumque ea pariatur sunt id rerum omnis voluptatum ab.</p>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Recusandae, ipsam.</p>
+    <p>Lorem ipsum dolor sit amet.</p>
+  </a>
+</div>
