--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,18 @@
 /* You can add global styles to this file, and also import other style files */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Montserrat', sans-serif
+}
+
+:root {
+  --gray: #d3d3d3;
+}
+
+body {
+  padding: 0 10%;
+  max-width: 1200px;
+  display: flex;
+  justify-content: center;
+}
