--- a/src/app/components/search/search.component.css
+++ b/src/app/components/search/search.component.css
@@ -1,37 +1,47 @@
 .search-container {
   width: 100%;
-  height: 80px;
+  height: 90px;
   display: flex;
   justify-content: center;
   align-items: center;
-  border-bottom: 1px solid var(--gray);
 }
 
 .search-form {
   width: 90%;
   max-width: 500px;
+  background-color: #fff;
+  box-shadow: 0 3px 10px #00000080;
+  border-radius: 50px;
+  overflow: hidden;
+  position: relative;
 }
 
 .search-input {
-  width: calc(100% - 80px);
-  height: 40px;
-  padding: 10px;
+  width: calc(100% - 50px);
+  height: 50px;
+  padding: 10px 20px;
+  background-color: transparent;
   border: none;
-  border: 1px solid var(--gray);
-  border-right: none;
   outline: none;
 }
 
 .search-button {
-  height: 40px;
-  width: 80px;
-  border: 1px solid var(--gray);
+  position: absolute;
+  top: 0;
+  right: 0;
+  height: 50px;
+  width: 50px;
+  font-size: 20px;
+  border: none;
+  padding: 0 10px;
+  color: var(--blue);
   cursor: pointer;
-  background-color: #f2f2f2;
+  background-color: transparent;
   outline: none;
 }
 
 .search-button:hover {
-  background-color: #e9e9e9;
+  background-color: var(--blue);
+  color: #fff;
   transition: .2s;
 }
