--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -1,5 +1,5 @@
 <div class="search-container">
-  <form class="search-form" #form="ngForm" (submit)="onSubmit(search)">
+  <form class="search-form" #form="ngForm" (submit)="onSubmit(form, search)">
     <!-- <span class="logo" routerLink="/">VidGameDB</span> -->
     <div>
       <input
@@ -7,6 +7,7 @@
       class="search-input"
       name="search"
       placeholder="Search YouTube!"
+      autofocus={{autofocus}}
       ngModel
       #search
       >
