home page UI modifications

--- a/src/app/components/landing-page/landing-page.component.html
+++ b/src/app/components/landing-page/landing-page.component.html
@@ -1,3 +1,7 @@
 <div class="container">
+  <video class="video-con" muted autoplay loop>
+    <source src="/assets/nature.mp4">
+  </video>
+
   <app-search autofocus="true"></app-search>
 </div>
