--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -1,11 +1,38 @@
+main {
+  width: 100vw;
+  max-width: 1200px;
+  margin: auto;
+  padding: 0 20px;
+}
+
+.main-con {
+  border-top: 1px solid #f2f2f2;
+  padding: 20px 0;
+  display: grid;
+  grid-gap: 1rem;
+  grid-template-columns: repeat(auto-fit, minmax(12rem, 1fr));
+}
+
 .container {
   display: inline-block;
   word-wrap: normal;
-  width: 250px;
-  height: 300px;
-  /* overflow: hidden;
-  white-space: nowrap;
-  text-overflow: ellipsis; */
+  /* width: 250px; */
+  /* height: 300px; */
+  background-color: #f2f2f2;
+  border-radius: 5px;
+  overflow: hidden;
+  transition: .2s;
+}
+
+.container:hover {
+  transform: translateY(-3px);
+  box-shadow: 2px 3px 10px #0000003b;
+  transition: .2s;
+}
+
+a {
+  text-decoration: none;
+  color: #000;
 }
 
 .img {
@@ -19,8 +46,30 @@
   object-fit: cover;
 }
 
+.info {
+  padding: 10px;
+}
+
 p {
   text-overflow: ellipsis;
   overflow: hidden;
   white-space: nowrap;
+}
+
+.title {
+  font-weight: 600;
+  font-size: 15px;
+}
+
+.channel-title {
+  font-size: 12px;
+  color: #4f4f4f;
+  font-weight: 400;
+  margin: 5px 0;
+}
+
+.date {
+  font-size: 12px;
+  color: #4f4f4f;
+  font-weight: 400;
 }
