--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -5,20 +5,89 @@
     <a href="https://www.youtube.com/watch?v={{video.id.videoId}}" target="_blank">
       <img src="{{video.snippet.thumbnails.medium.url}}" alt="">
       <p>{{video.snippet.title}}</p>
-      <p>{{video.snippet.channelTitle}}</p>
+      <p>YouTube &rsaquo; {{video.snippet.channelTitle}}</p>
       <p>{{video.snippet.publishTime | date}}</p>
     </a>
   </div>
 
-  <div class="container">
-    <a href="" target="_blank">
-      <div class="img">
-        <img src="/assets/img2.png" alt="">
-      </div>
-      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aut optio veniam cumque ea pariatur sunt id rerum omnis voluptatum ab.</p>
-      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Recusandae, ipsam.</p>
-      <p>Lorem ipsum dolor sit amet.</p>
-    </a>
+  <div class="main-con">
+    <div class="container">
+      <a href="" target="_blank">
+        <div class="img">
+          <img src="/assets/bg.png" alt="">
+        </div>
+        <div class="info">
+          <p class="title">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aut optio veniam cumque ea pariatur sunt id rerum omnis voluptatum ab.</p>
+          <p class="channel-title">YouTube &rsaquo; Lorem ipsum dolor, sit amet consectetur adipisicing elit. Recusandae, ipsam.</p>
+          <p class="date">Lorem ipsum dolor sit amet.</p>
+        </div>
+      </a>
+    </div>
+
+    <div class="container">
+      <a href="" target="_blank">
+        <div class="img">
+          <img src="/assets/bg.png" alt="">
+        </div>
+        <div class="info">
+          <p class="title">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aut optio veniam cumque ea pariatur sunt id rerum omnis voluptatum ab.</p>
+          <p class="channel-title">YouTube &rsaquo; Lorem ipsum dolor, sit amet consectetur adipisicing elit. Recusandae, ipsam.</p>
+          <p class="date">Lorem ipsum dolor sit amet.</p>
+        </div>
+      </a>
+    </div>
+
+    <div class="container">
+      <a href="" target="_blank">
+        <div class="img">
+          <img src="/assets/bg.png" alt="">
+        </div>
+        <div class="info">
+          <p class="title">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aut optio veniam cumque ea pariatur sunt id rerum omnis voluptatum ab.</p>
+          <p class="channel-title">YouTube &rsaquo; Lorem ipsum dolor, sit amet consectetur adipisicing elit. Recusandae, ipsam.</p>
+          <p class="date">Lorem ipsum dolor sit amet.</p>
+        </div>
+      </a>
+    </div>
+
+    <div class="container">
+      <a href="" target="_blank">
+        <div class="img">
+          <img src="/assets/bg.png" alt="">
+        </div>
+        <div class="info">
+          <p class="title">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aut optio veniam cumque ea pariatur sunt id rerum omnis voluptatum ab.</p>
+          <p class="channel-title">YouTube &rsaquo; Lorem ipsum dolor, sit amet consectetur adipisicing elit. Recusandae, ipsam.</p>
+          <p class="date">Lorem ipsum dolor sit amet.</p>
+        </div>
+      </a>
+    </div>
+
+    <div class="container">
+      <a href="" target="_blank">
+        <div class="img">
+          <img src="/assets/bg.png" alt="">
+        </div>
+        <div class="info">
+          <p class="title">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aut optio veniam cumque ea pariatur sunt id rerum omnis voluptatum ab.</p>
+          <p class="channel-title">YouTube &rsaquo; Lorem ipsum dolor, sit amet consectetur adipisicing elit. Recusandae, ipsam.</p>
+          <p class="date">Lorem ipsum dolor sit amet.</p>
+        </div>
+      </a>
+    </div>
+
+    <div class="container">
+      <a href="" target="_blank">
+        <div class="img">
+          <img src="/assets/bg.png" alt="">
+        </div>
+        <div class="info">
+          <p class="title">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aut optio veniam cumque ea pariatur sunt id rerum omnis voluptatum ab.</p>
+          <p class="channel-title">YouTube &rsaquo; Lorem ipsum dolor, sit amet consectetur adipisicing elit. Recusandae, ipsam.</p>
+          <p class="date">Lorem ipsum dolor sit amet.</p>
+        </div>
+      </a>
+    </div>
   </div>
 
 </main>
