--- a/src/app/components/landing-page/landing-page.component.css
+++ b/src/app/components/landing-page/landing-page.component.css
@@ -1,8 +1,8 @@
 .container {
   width: 100vw;
   height: 100vh;
-  background-image: url('/assets/bg.png');
-  background-color: #000000a9;
+  /* background-image: url('/assets/bg.png'); */
+  background-color: #000;
   background-blend-mode: overlay;
   background-size: cover;
   background-position: center;
@@ -10,6 +10,17 @@
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.video-con {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+  opacity: 0.7;
 }
 
 app-search {
