--- a/src/app/components/landing-page/landing-page.component.html
+++ b/src/app/components/landing-page/landing-page.component.html
@@ -3,5 +3,5 @@
     <source src="/assets/nature.mp4">
   </video>
 
-  <app-search autofocus="true"></app-search>
+  <app-search></app-search>
 </div>
