landing page preloader

--- a/src/app/components/landing-page/landing-page.component.html
+++ b/src/app/components/landing-page/landing-page.component.html
@@ -1,7 +1,12 @@
-<div class="container">
-  <video class="video-con" muted autoplay loop>
-    <source src="/assets/nature.mp4">
+<div class="container" *ngIf="visible">
+  <video class="video-con" autoplay loop [muted]="'muted'">
+    <source src="/assets/nature.mp4" muted>
   </video>
 
   <app-search></app-search>
+</div>
+
+<!-- preloader -->
+<div class="container preloader" *ngIf="!visible">
+  <div class="loader"></div>
 </div>
