--- a/src/app/components/landing-page/landing-page.component.html
+++ b/src/app/components/landing-page/landing-page.component.html
@@ -1,5 +1,5 @@
 <div class="container" *ngIf="visible">
-  <video class="video-con" autoplay loop [muted]="'muted'">
+  <video class="video-con" autoplay [muted]="'muted'">
     <source src="/assets/nature.mp4" muted>
   </video>
 
