--- a/src/app/components/landing-page/landing-page.component.css
+++ b/src/app/components/landing-page/landing-page.component.css
@@ -23,6 +23,15 @@
   opacity: 0.7;
 }
 
+.overlay {
+  height: 100vh;
+  width: 100vw;
+  background-color: #00000009;
+  position: absolute;
+  top:0;
+  left:0;
+}
+
 app-search {
   width: 100%;
 }
